[tool.poetry]
name = "rbren-sdk-experiments"
version = "0.1.0"
description = "Experiments and demos using the OpenHands Agent SDK"
authors = ["OpenHands Team <contact@all-hands.dev>"]
readme = "README.md"
license = "MIT"
package-mode = false
keywords = ["ai", "agent", "sdk", "openhands", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.urls]
Homepage = "https://github.com/All-Hands-AI/rbren-sdk-experiments"
Repository = "https://github.com/All-Hands-AI/rbren-sdk-experiments"
Documentation = "https://github.com/All-Hands-AI/rbren-sdk-experiments#readme"
Issues = "https://github.com/All-Hands-AI/rbren-sdk-experiments/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Core OpenHands Agent SDK from GitHub
openhands = {git = "https://github.com/All-Hands-AI/agent-sdk.git"}
# Core dependencies for demos
anthropic = ">=0.25.0"
pydantic = ">=2.11.7"
# Optional: for enhanced logging and debugging
rich = ">=13.0.0"
typer = ">=0.9.0"
# Agent SDK dependencies (required for proper functionality)
fastmcp = ">=2.11.3"
litellm = ">=1.75.9"
python-frontmatter = ">=1.1.0"
python-json-logger = ">=3.3.0"
tenacity = ">=9.1.2"
tomli = {version = ">=1.2.0", markers = "python_version < '3.11'"}
websockets = ">=12"
bashlex = ">=0.18"
libtmux = ">=0.46.0"
binaryornot = ">=0.4.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"